[tool.poetry]
name = "chronocluster"
version = "0.1.0"
description = "A point distribution analysis tool for archaeologist."
authors = [
    "Christopher Carleton <carleton@gea.mpg.de>",
    "Shuang Song (SongshGeo) <song@gea.mpg.de>",
    ]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
xarray = "^2025.1.2"
scipy = "^1.15.1"
geopandas = "^1.0.1"
rasterio = "^1.4.3"
pointpats = "^2.5.1"  # alternative?
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
plotly = "^6.0.0"
pymc = "^5.20.0"
numpy = ">=2.0,<3.0"
scikit-image = "^0.25.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.4"
ipywidgets = "^8.1.5"
pytest-mpl = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
